added rake plugin

--- a/jenkins-server.template
+++ b/jenkins-server.template
@@ -360,6 +360,8 @@
                                 "# Wait 30 seconds to allow Jenkins to startup\n",
                                 "echo \"Waiting 30 seconds for Jenkins to start.....\"\n",
                                 "sleep 30\n",
+								"gem install rake\n",
+								"gem install haml\n",
                                 "# Install the required plugins\n",
                                 "cd /var/lib/jenkins/plugins\n",
                                 "curl -O -L https://updates.jenkins-ci.org/latest/multiple-scms.hpi\n",
@@ -370,11 +372,10 @@
                                 "curl -O -L https://updates.jenkins-ci.org/latest/git.hpi\n",
                                 "curl -O -L https://updates.jenkins-ci.org/latest/codedeploy.hpi\n",
                                 "curl -O -L https://updates.jenkins-ci.org/latest/aws-codepipeline.hpi\n",
+								"curl -O -L https://updates.jenkins-ci.org/latest/rake.hpi\n",
                                 "chown jenkins:jenkins *.hpi\n",
                                 "# Restarting Jenkins\n",
-                                "service jenkins restart\n",
-								"gem install rake\n",
-								"gem install haml\n"
+                                "service jenkins restart\n"
                             ]
                         ]
                     }
