updated jenkins repo

--- a/jenkins-server.template
+++ b/jenkins-server.template
@@ -350,8 +350,8 @@
                                 },
                                 "\n",
                                 "# Install Jenkins\n",
-                                "wget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat/jenkins.repo\n",
-                                "rpm --import http://pkg.jenkins-ci.org/redhat/jenkins-ci.org.key\n",
+                                "wget -O /etc/yum.repos.d/jenkins.repo https://pkg.jenkins.io/redhat/jenkins.repo\n",
+                                "rpm --import https://pkg.jenkins.io/redhat/jenkins.io.key\n",
                                 "yum install -y jenkins\n",
                                 "service jenkins start\n",
                                 "chkconfig jenkins on\n",
