--- a/jenkins-server.template
+++ b/jenkins-server.template
@@ -350,7 +350,7 @@
                                 },
                                 "\n",
                                 "# Install Jenkins\n",
-				"wget --no-cookies --header \"Cookie: gpw_e24=xxx; oraclelicense=accept-securebackup-cookie;\" \"http://download.oracle.com/otn-pub/java/jdk/9.0.4+11/c2514751926b4512b076cc82f959763f/jdk-9.0.4_linux-x64_bin.rpm\"\n",
+				"wget \"https://s3.amazonaws.com/aws300/jdk-9.0.4_linux-x64_bin.rpm\"\n",
 				"rpm -i jdk-9.0.4_linux-x64_bin.rpm\n",				
                                 "wget -O /etc/yum.repos.d/jenkins.repo https://pkg.jenkins.io/redhat/jenkins.repo\n",
                                 "rpm --import https://pkg.jenkins.io/redhat/jenkins.io.key\n",
